--- a/.gitignore
+++ b/.gitignore
@@ -49,9 +49,9 @@ build-iPhoneSimulator/
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
 /test/*
-/config/database.yml
-/config/secrets.yml
-/config/settings.local.yml
-/config/settings/*.local.yml
-/config/environments/*.local.yml
-/log/development.log
+config/database.yml
+config/secrets.yml
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
+log/development.log
